# proj_computacao_grafica

./: CMakeLists.txt  README.md  main.cpp
desenho/axes/: Axes.cpp  Axes.h
desenho/circle/: Circle.cpp  Circle.h
desenho/cube/: Cube.cpp  Cube.h
desenho/shape/: Shape.h
desenho/triangle/: Triangle.cpp  Triangle.h
